<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="webersolutions.mccwireless.Offer"
    android:background="#c1e4fb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtChoose"
        android:id="@+id/txtChoose"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDscnt"
        android:id="@+id/txtDscnt"
        android:layout_below="@+id/txtChoose"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:textStyle="italic" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDscnt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:id="@+id/rgrpPhone"
        android:background="#61fdfdfe">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPhoneSubTitle"
            android:id="@+id/txtPhoneSubTitle"
            android:layout_below="@+id/txtDscnt"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textColor="#0235a1"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnphone1"
            android:id="@+id/rbtnPhone1"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnphone2"
            android:id="@+id/rbtnPhone2"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnphone3"
            android:id="@+id/rbtnPhone3"
            android:checked="false" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:id="@+id/rgrpTV"
        android:layout_below="@+id/rgrpPhone"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#48479ff7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTVSubTitle"
            android:id="@+id/txtTVSubTitle"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#0235a1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnTV1"
            android:id="@+id/rbtnTV1"
            android:layout_gravity="center_horizontal|left"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnTV2"
            android:id="@+id/rbtnTV2"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnTV3"
            android:id="@+id/rbtnTV3"
            android:checked="false" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:id="@+id/rgrpInternet"
        android:layout_below="@+id/rgrpTV"
        android:layout_alignParentRight="true"
        android:background="#61fdfdfe">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInternetSubTitle"
            android:id="@+id/txtInternetSubTitle"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#0235a1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnInternet1"
            android:id="@+id/rbtnInternet1"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnInternet2"
            android:id="@+id/rbtnInternet2"
            android:layout_gravity="left"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnInternet3"
            android:id="@+id/rbtnInternet3"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnEstimate"
        android:id="@+id/btnEst"
        android:layout_below="@+id/rgrpInternet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#0b37ea"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/btnEst"
        android:textStyle="normal"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/btnEst"
        android:layout_alignTop="@+id/btnEst" />

</RelativeLayout>
