<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="webersolutions.mccwireless.MainActivity"
    android:background="#c1e4fb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBlurb2"
        android:id="@+id/txtBlurb2"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_above="@+id/imgOfferBtn"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBlurb3"
        android:id="@+id/txtBlurb3"
        android:textSize="25sp"
        android:textColor="#06adfa"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_below="@+id/txtBlurb1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBlurb1"
        android:id="@+id/txtBlurb1"
        android:layout_below="@+id/txtTitle"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtOfferBtn"
        android:id="@+id/imgOfferBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/mccwlogo"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

</RelativeLayout>
